docs/7.52/md/abeninheritance_interfaces.md
---
title: "Inheritance and Interfaces"
description: |
  Interfaces(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninterfac.htm) are standalone constructs in ABAP Objects that support polymorphism(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpolymorphism_glosry.htm 'Glossary Entry') of classes. The polymorphism of int
version: "7.52"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninheritance_interfaces.htm"
abapFile: "abeninheritance_interfaces.htm"
keywords: ["do", "if", "case", "try", "method", "class", "abeninheritance", "interfaces"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Declarations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendeclarations.htm) →  [Declaration Statements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_declarations.htm) →  [Classes and Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenclasses_and_interfaces.htm) →  [ABAP Objects - Overview](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_objects_oview.htm) →  [Inheritance](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninheritance.htm) → 

Inheritance and Interfaces

[Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninterfac.htm) are standalone constructs in ABAP Objects that support [polymorphism](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpolymorphism_glosry.htm "Glossary Entry") of classes. The polymorphism of interfaces is based on the fact that each class implementing an interface can implement the methods of that interface differently. To the outside world, all interface components look similar which is why [interface reference variables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninterface_ref_variable_glosry.htm "Glossary Entry") can point to objects of all classes that implement the associated interface.

The interface concept exists independently of and in addition to the inheritance concept.The classes of an inheritance tree can implement any number of interfaces but each interface can be implemented only once in each inheritance tree. This ensures that each interface component comp has a unique name in the entire inheritance tree intf~icomp and that, starting with the class that implements it, it is contained in all subclasses. [Interface reference variables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninterface_ref_variable_glosry.htm "Glossary Entry") that can point to a class of the inheritance tree can also point to all subclasses. Once implemented, interface methods are fully functioning components of a class and can be redefined in subclasses. In the case of interface methods defined as optional using [DEFAULT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmethods_default.htm) (and without explicit implementation), the default behavior when called applies along a path of an inheritance tree until a redefinition with explicit implementation occurs.